Refactoring CategoriesController Annotations
